--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 :root {
+  --button-bg: white;
+  --button-text: #08060d;
   --text: #6b6375;
   --text-h: #08060d;
   --bg: #fff;
@@ -32,6 +34,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    --button-bg: #2e303a;
+    --button-text: #f3f4f6;
     --text: #9ca3af;
     --text-h: #f3f4f6;
     --bg: #16171d;
